--- a/Pratica/P001/index.html
+++ b/Pratica/P001/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Landing</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Welcome To The Beach</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis ipsum officia numquam expedita ullam.</p>
-        <button><a href="#">Read More</a></button>
-    </div>
+    <header>
+        <h1>WeEat</h1>
+        <p id="entrar">Entrar</p>
+        <p id="cadastre">Cadastre</p>
+    </header>
 </body>
 </html>
