--- a/Exercícios/EX022/fundo001.html
+++ b/Exercícios/EX022/fundo001.html
@@ -6,16 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Imagem de Fundo</title>
     <style>
+        body {
+            background-image: url(Imagens/pattern001.png);
+        }
         div.quadrado {
+            display: inline-block;
+            border-radius: 14px;
             border: 1px solid black;
             width: 300px;
             height: 300px;
+            background-color: aqua;
         }
+
+         div#q1 {
+            background-color: azure;
+         }
+
+         div#q2 {
+            background-image: linear-gradient(150deg, skyblue, blue);
+         }
+
+         div#q3 {
+            background-image: url(Imagens/pattern003.png);
+         }
     </style>
 </head>
 <body>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-    <div class="quadrado"></div>
-</body>
+    <div class="quadrado" id="q1"></div>
+    <div class="quadrado" id="q2"></div>
+    <div class="quadrado" id="q3"></div>
+</body>    
 </html>
