--- a/Exercícios/EX022/fundo006.html
+++ b/Exercícios/EX022/fundo006.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 90vh;
-            background-color: black;
-            background-image: url(Imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: cover;
+            background: black url(Imagens/wallpaper002.jpg) center center/cover no-repeat fixed;
         }
 
         main {
             background-color: white;
-            width: 500px;
+            max-width: 400px;
             padding: 15px;
             margin: auto;
             border: 1px solid rgb(42, 81, 97);
@@ -28,6 +24,30 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
+        Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
+        Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, iste ad! Itaque ut, laudantium dicta excepturi recusandae magni? Explicabo accusamus voluptates aliquam reiciendis suscipit quisquam assumenda ipsam sint eius ipsum!
         Nulla, harum esse, odio optio debitis exercitationem officiis tenetur molestias impedit voluptatem eveniet explicabo, laborum repudiandae modi porro culpa rerum atque at! Optio deleniti, non ducimus quos officia dolores soluta.
         Fugit, autem iusto delectus nobis perferendis accusamus aperiam, nemo earum sit maiores debitis nihil assumenda. Sunt dignissimos nulla ducimus deleniti doloremque sequi, accusamus nobis aspernatur tenetur, labore iusto provident quae.</p>
     </main>
