--- a/Desafios/desafio012/desafio012.html
+++ b/Desafios/desafio012/desafio012.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 11</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img2">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
