--- a/Exercícios/EX024/iframe001.html
+++ b/Exercícios/EX024/iframe001.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos iframe</title>
     <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+        }
     </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Repositório do 
-        <iframe src="https://guilhermecolares.github.io" frameborder="0">
+        <iframe src="https://www.hltv.org/" frameborder="0">
         <a href="https://guilhermecolares.github.io">guilhermecolares</a>
 
         </iframe> é poggers</p>
