--- a/Exercícios/EX024/iframe002.html
+++ b/Exercícios/EX024/iframe002.html
@@ -6,7 +6,7 @@
     <title>Estudos com Iframe</title>
     <style>
         iframe {
-            width: 300px;
+            width: 400px;
             height: 300px;
         }
     </style>
@@ -15,7 +15,9 @@
     <h1>Testando iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis temporibus hic mollitia blanditiis maiores iure error maxime veniam et aliquam labore nesciunt cum officia asperiores a, totam aut earum praesentium.</p>
 
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas.html/pag001.html" frameborder="0">
+        <p>Infelizmente seu navegador não é compatativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, voluptates corporis fuga quas assumenda incidunt, eum odio soluta sint officia facilis et, culpa a repellendus ipsum dolore quae amet recusandae.</p>
 </body>
